--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
         "sort-packages": true
     },
     "require-dev": {
-        "php-parallel-lint/php-parallel-lint": "^1.2",
-        "phpunit/phpunit": "^9.2"
+        "friendsofphp/php-cs-fixer": "^3.88",
+        "php-parallel-lint/php-parallel-lint": "^1.4",
+        "phpunit/phpunit": "^11"
     },
     "require": {
-        "php": "^8.0",
-        "dealnews/data-mapper": "^3.1",
-        "dealnews/db": "^3.2",
+        "php": "^8.2",
+        "dealnews/data-mapper": "^3.3",
+        "dealnews/db": "^4.0",
         "moonspot/value-objects": "^2.1"
     },
     "autoload": {
@@ -29,7 +30,7 @@
     },
     "scripts": {
         "phan": [
-            "docker run --rm -e PHAN_DISABLE_XDEBUG_WARN=1 -v `pwd`:/mnt/src -w /mnt/src phanphp/phan:5 -p"
+            "phan"
         ],
         "test": [
             "parallel-lint src/ tests/",
@@ -39,7 +40,7 @@
             "parallel-lint src/ tests/"
         ],
         "fix": [
-            "~/.composer/vendor/bin/php-cs-fixer fix --config .php_cs.dist src tests"
+            "php-cs-fixer fix --config .php-cs-fixer.dist.php src tests"
         ]
     }
 }
